fixed overflow bug on mobile screens

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,7 +4,11 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
 a{text-decoration: none; color: inherit;}
 
-.main{font-family: "Inter",sans-serif; background-color: $main-bg; color: $main-color;}
+body{
+    overflow-x: hidden;
+}
+
+.main{font-family: "Inter",sans-serif; background-color: $main-bg; color: $main-color; overflow-x: hidden;}
 .container{ 
     display: flex;
 
